--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -6,6 +6,12 @@
   border: 1px solid var(--p-surface-300);
 }
 
+:host-context(.dark) {
+  :host {
+    border: 1px solid var(--p-surface-600);
+  }
+}
+
 :host.shadow {
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
 }
@@ -40,7 +46,6 @@
     font-size: 1.5rem;
   }
 }
-
 
 :host.primary {
   ::ng-deep.summary-icon {
